--- a/my-project/package.json
+++ b/my-project/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "sass-watch": "sass --no-source-map --watch src/css/main.scss public/css/main.css",
+    "sass-compile": "sass --no-source-map src/css/main.scss public/css/main.css",
+    "sass-watch": "sass --no-source-map src/css/main.scss public/css/main.css",
     "nodemon-watch": "nodemon index.js -e *",
     "uglify": "uglifyjs src/js/*.js -m -c -o public/js/main.js",
     "watch:js": "onchange \"src/js/**/*.js\" -- npm run uglify",
-    "build": "npm-run-all --parallel sass-watch nodemon-watch uglify watch:js"
+    "build": "npm-run-all  sass-compile uglify"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
