--- a/my-project-nabthat/package.json
+++ b/my-project-nabthat/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.77.8",
     "vite": "^5.3.1"
   }
