--- a/my-project-nabthat/package.json
+++ b/my-project-nabthat/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "setup-and-build": "npm install && npm run build"
   },
   "devDependencies": {
     "rollup-plugin-copy": "^3.5.0",
